Update weekly log

--- a/WeeklyLogs/Log112424_120724.md
+++ b/WeeklyLogs/Log112424_120724.md
@@ -36,9 +36,7 @@ Figure 3: Water level amplitude and velocity amplitude along estuary, Scheldt Es
 - Case 3 does not, does not get down to paper's ~2.5m tidal range
 
 ![FigB7copy](../Figures/120524meeting/vanRijn2010FigB7_copy.png)<br>
-![FigB7](../Figures/120524meeting/vanRijn2010FigB7.png)<br>
 Figure 4: Computed tidal ranges for converging channel CASES 1 and 3 (L=60 km; h=10 and 5 m) based on analytical model.
-
 
 
 ## Issues:
@@ -46,3 +44,4 @@ Figure 4: Computed tidal ranges for converging channel CASES 1 and 3 (L=60 km; h
 - CASE 3 tidal range doesn't match paper's
 
 ## Next steps:
+- Try method on Chehalis (tried quickly, but had phase shift of 6 hours at Montesano)
