Update weekly log

--- a/WeeklyLogs/Log120824_121424.md
+++ b/WeeklyLogs/Log120824_121424.md
@@ -1,19 +1,19 @@
 # December 08 - 14, 2024
 
 ## Summary:
-1) DSWx
+1) DSWx surface area
 
 ## Results:
 ### Surface area
 - Calculated wetted cells and wetted surface area for available radar images (Willapa Bay and Grays Harbor):
 	- 12/10/2021
 	- 12/12/2021
-	- 12/16/2021
+	- 12/16/2021 (unusable, GH cut off)
 	- 12/19/2021
 	- 12/22/2021
-	- 12/28/2021
-	- 01/09/2022
-	- 01/21/2022
+	- 12/28/2021 (unusable, GH cut off)
+	- 01/09/2022 (unusable, GH cut off)
+	- 01/21/2022 (unusable, GH cut off)
 	- 12/18/2023
 - Isolated each system within bounds (Fig. 1, 2)
 
@@ -44,6 +44,7 @@ Figure 4: Grays Harbor - (a) Number of cells vs. wetted area, (b) wetted area vs
 
 
 ## Next steps:
-- Figure out how to isolate the domains better for calculating wetted surface area
+- Clean up/isolate domains better for calculating wetted surface area
+- Continue figuring out why velocity in analytical model is inversed and not correct magnitude for Scheldt Estuary
 
  
