--- a/WeeklyLogs/Log120824_121424.md
+++ b/WeeklyLogs/Log120824_121424.md
@@ -15,7 +15,7 @@
 	- 01/09/2022 (unusable, GH cut off)
 	- 01/21/2022 (unusable, GH cut off)
 	- 12/18/2023
-- Isolated each system within bounds (Fig. 1, 2)
+- Isolated each system within polygons (Fig. 1, 2)
 
 
 ![WillapaBayIso](../Figures/121224meeting/WillapaBayDSWxS1_domain.png)<br>
@@ -44,7 +44,6 @@ Figure 4: Grays Harbor - (a) Number of cells vs. wetted area, (b) wetted area vs
 
 
 ## Next steps:
-- Clean up/isolate domains better for calculating wetted surface area
 - Continue figuring out why velocity in analytical model is inversed and not correct magnitude for Scheldt Estuary
 
  
