Update weekly log

--- a/WeeklyLogs/Log120824_121424.md
+++ b/WeeklyLogs/Log120824_121424.md
@@ -23,12 +23,24 @@ Figure 1: DSWx bounds for Willapa Bay.<br>
 
 ![WillapaBayTable](../Figures/121224meeting/WillapaBayDSWxS1_table.png)<br>
 Table 1: Number of wetted cells, wetted surface area and water levels at Tokepoint and Willapa River gauges for available radar images.<br>
+- Tokepoint water levels referenced to NAVD88:
+	- MLLW: -0.249m
+	- MLW: 0.168m
+	- MSL: 1.209m
+	- MHW: 2.244m
+	- MHHW: 2.47m
 
 ![GraysHarborIso](../Figures/121224meeting/GraysHarborDSWxS1_domain.png)<br>
 Figure 2: DSWx bounds for Grays Harbor.<br>
 
 ![GraysHarborTable](../Figures/121224meeting/GraysHarborDSWxS1_table.png)<br>
 Table 2: Number of wetted cells, wetted surface area and water levels at Westport and Montesano gauges for available radar images.<br>
+- Westport water levels referenced to NAVD88:
+	- MLLW: -0.343
+	- MLW: 0.083m
+	- MSL: 1.141m
+	- MHW: 2.218m
+	- MHHW: 2.444m
 
 - Number of wetted cells and wetted area are linearly correlated as expected (Fig. 3a, 4a)
 - Wetted area calculated is more correlated with water levels near the mouth compared to upstream gauges (Willapa, Montesano) (Fig. 3b, 4b).
