--- a/WeeklyLogs/Log121524_122124.md
+++ b/WeeklyLogs/Log121524_122124.md
@@ -4,18 +4,17 @@
 1) Finally got analytical model working for Scheldt!
 
 ## Results
-- 
-### Water level and velocity at x=0 and x=50km
+### 1) Water level and velocity at x=0 and x=50km
 - Instead of calculating u_obarhat, I used 0.8 (range for Scheldt was 0.8-1.2m/s)
 	- Kept u_barhat as 0.8
 - Magnitude of water level and velocity matches Figure 4.5 (Fig. 1)
 - Increasing u_obarhat increases the velocity magnitude
 
-![Fig4.5copy](../Figures/120524meeting/vanRijn2010Fig45_copy.png)<br>
+![Fig4.5copy](../Figures/120524meeting/vanRijn2010Fig45.png)<br>
 ![Fig4.5](../Figures/121924meeting/vanRijn2010_fig45.png)<br>
 Figure 1: Water level and velocity at x=50 km and x=0 m for k_s=0.03 m, Scheldt Estuary.
 
-## Case 1 and Case 3 (varying depth)
+## 2) Case 1 and Case 3 (varying depth)
 - Case 1: ho=10m; ks=0.05m (Fig. 2b)
 - Case 3: ho=5m; ks=0.05m (Fig. 2c)
 - Upstream tidal range decreases as channel depth decreases 
@@ -24,7 +23,7 @@ Figure 1: Water level and velocity at x=50 km and x=0 m for k_s=0.03 m, Scheldt 
 ![Case1,3](../Figures/121924meeting/vanRijn2010_case1_case3.png)<br>
 Figure 2: Water level and current velocity for Case 1 (a,b) and Case 3 (c).
 
-## Comparing water level amplitude with observations
+## 3) Comparing water level amplitude with observations
 - Water level amplitude and velocity amplitude plotted along channel (Fig. 3)
 - Water level amplitude from analytical model agrees well with observed data (within 10%)
 	- Error for Vlissingen= 1.88 %
@@ -32,7 +31,7 @@ Figure 2: Water level and current velocity for Case 1 (a,b) and Case 3 (c).
 	- Error for Hansweert= 1.32 %
 	- Error for Bath= 0.72 %
 
-![Fig4.6copy](../Figures/120524meeting/vanRijn2010Fig46_copy.png)<br>
+![Fig4.6copy](../Figures/120524meeting/vanRijn2010Fig46.png)<br>
 ![Fig4.6](../Figures/121924meeting/vanRijn2010_fig46.png)<br>
 Figure 3: Water level amplitude and velocity amplitude along estuary, Scheldt Estuary.
 
