--- a/WeeklyLogs/Log121524_122124.md
+++ b/WeeklyLogs/Log121524_122124.md
@@ -35,6 +35,19 @@ Figure 2: Water level and current velocity for Case 1 (a,b) and Case 3 (c).
 ![Fig4.6](../Figures/121924meeting/vanRijn2010_fig46.png)<br>
 Figure 3: Water level amplitude and velocity amplitude along estuary, Scheldt Estuary.
 
+## 4) Tidal range along estuary for different ks values
+- Increasing ks results in a reduction in upstream tidal range (Fig. 4, table 1)
+	- Increasing ks -> increasing bottom friction -> smaller tidal range
+
+![Fig4.6](../Figures/121924meeting/vanRijn2010_fig47_copy.png)<br>
+![Fig4.6](../Figures/121924meeting/vanRijn2010_fig47.png)<br>
+Figure 4: Water level amplitude and velocity amplitude along estuary, Scheldt Estuary.
+
+![Table4.4book](../Figures/121924meeting/vanRijn2010_table44_copy.png)<br>
+![Table4.4](../Figures/121924meeting/vanRijn2010_table44.png)<br>
+Table 1: Measured and computed tidal data (spring tide) of Scheldt Estuary based on analytical linearized method for a converging channel.
+
+## 5) 
 
 ## Issues
 
