--- a/WeeklyLogs/Log121524_122124.md
+++ b/WeeklyLogs/Log121524_122124.md
@@ -19,6 +19,9 @@ Figure 1: Water level and velocity at x=50 km and x=0 m for k_s=0.03 m, Scheldt 
 - Case 3: ho=5m; ks=0.05m (Fig. 2c)
 - Upstream tidal range decreases as channel depth decreases 
 - Phase of water level and velocity changes as well
+- Tested increasing water depth:
+	- Phase lead approaches 3 hours
+	- Water level and velocity becomes more uniform along channel (no amplification) and no along channel lag for water levels or velocity
 
 ![Case1,3](../Figures/121924meeting/vanRijn2010_case1_case3.png)<br>
 Figure 2: Water level and current velocity for Case 1 (a,b) and Case 3 (c).
@@ -47,10 +50,21 @@ Figure 4: Water level amplitude and velocity amplitude along estuary, Scheldt Es
 ![Table4.4](../Figures/121924meeting/vanRijn2010_table44.png)<br>
 Table 1: Measured and computed tidal data (spring tide) of Scheldt Estuary based on analytical linearized method for a converging channel.
 
-## 5) 
+## 5) Chehalis River analytical model
+- ~0.3m tidal amplification between Westport and Montesano gauge
+- Phase lag of ~2.98 hours (Fig. 5)
+- ~0.1m amplification in analytical model using only M2 tide (Fig. 6)
 
-## Issues
+![ChehalisWaterLevelVelocity](../Figures/121924meeting/chehalis_waterlevel_velocity.png)<br>
+Figure 5: Water level and velocity at mouth (x=0) and Montesano (x=45km).
 
+
+![ChehalisTidalRange](../Figures/121924meeting/chehalis_tidalrange.png)<br>
+Figure 6: Along-channel tidal range for Chehalis River.
 
 ## Next steps
+- Apply to Chehalis River
+	- Add in additional tidal constituents
+	- Add in compound channels
+- Make list of available DSWx-S1 records for Twin Harbors and calculate statistics
 
