Update weekly log

--- a/WeeklyLogs/Log122224_011124.md
+++ b/WeeklyLogs/Log122224_011124.md
@@ -7,6 +7,8 @@
 - van Rijn sent over spreadsheet model
 - Things that were different:
 	- Calculations for Chezy's and hydraulic radius
+		- In van Rijn (2011), C=65 for ks=0.03
+		- Using spreadsheet model equations, C=64.83 for ks=0.03 
 	- Included river discharge (but set to 0)
 - Biggest difference was using the initial peak velocity:
 	- "Remember, the model is linearized. Basically, the roughness depends on the velocity. So, you have to iterate (trial and error) manually a few times by making an input velocity equal to the computed velocity."
@@ -14,8 +16,29 @@
 	- Calculated peak velocity that is then used to calculate along channel velocity for each time step
 - Tidal amplitude is also calculated first, then used to calculate along channel water level for each time step
 
+Steps I've gathered from the spreadsheet:
+1) Calculate beta
+2) Calculate omega
+3) Calculate hydraulic radius (R)
+4) Calculate Chezy's (C)
+5) Calculate linearized friction coefficient (m)
+6) Calculate classical wave speed (co)
+7) Calculate alpha and wavenumber (k) based on "amplified" or "dampened" regime
+8) Calculate friction coefficient (mu)
+9) Calculate wave speed (c)
+10) Calculate phase speed (phi)
+11) Calculate width (b)
+
+Next are the new steps:
+12) Calculate tidal amplitude (along channel)
+13) Calculate peak velocity (along channel)
+14) Calculate water level at each time step based on location
+15) Calculate velocity at each time step based on location (using peak velocity calculated, but unsure how he got 0.824)
+
 ## Issues
 - Close to reproducing but unsure about finding peak velocity at each time step
+- van Rijn uses a different eta_o and u_max for calculating the water level and velocity at the mouth and at location x
+- HOWEVER, using original method with u=0.824 and explicit values for omega, m, co, k, mu, and phi from pg. 40 gives accurate Fig. 4.5
 
 ## Next steps
 - Decipher spreadsheet model
