Update weekly log

--- a/WeeklyLogs/Log122224_011124.md
+++ b/WeeklyLogs/Log122224_011124.md
@@ -29,7 +29,7 @@ Steps I've gathered from the spreadsheet:
 10) Calculate phase speed (phi)
 11) Calculate width (b)
 
-Next are the new steps:
+Next are the new steps:<br>
 12) Calculate tidal amplitude (along channel)
 13) Calculate peak velocity (along channel)
 14) Calculate water level at each time step based on location
