Update weekly log

--- a/WeeklyLogs/Log122224_011124.md
+++ b/WeeklyLogs/Log122224_011124.md
@@ -17,22 +17,22 @@
 - Tidal amplitude is also calculated first, then used to calculate along channel water level for each time step
 
 Steps I've gathered from the spreadsheet:
-1) Calculate beta
-2) Calculate omega
-3) Calculate hydraulic radius (R)
-4) Calculate Chezy's (C)
-5) Calculate linearized friction coefficient (m)
-6) Calculate classical wave speed (co)
-7) Calculate alpha and wavenumber (k) based on "amplified" or "dampened" regime
-8) Calculate friction coefficient (mu)
-9) Calculate wave speed (c)
-10) Calculate phase speed (phi)
+1) Calculate beta<br>
+2) Calculate omega<br>
+3) Calculate hydraulic radius (R)<br>
+4) Calculate Chezy's (C)<br>
+5) Calculate linearized friction coefficient (m)<br>
+6) Calculate classical wave speed (co)<br>
+7) Calculate alpha and wavenumber (k) based on "amplified" or "dampened" regime<br>
+8) Calculate friction coefficient (mu)<br>
+9) Calculate wave speed (c)<br>
+10) Calculate phase speed (phi)<br>
 11) Calculate width (b)
 
 Next are the new steps:<br>
-12) Calculate tidal amplitude (along channel)
-13) Calculate peak velocity (along channel)
-14) Calculate water level at each time step based on location
+12) Calculate tidal amplitude (along channel)<br>
+13) Calculate peak velocity (along channel)<br>
+14) Calculate water level at each time step based on location<br>
 15) Calculate velocity at each time step based on location (using peak velocity calculated, but unsure how he got 0.824)
 
 ## Issues
