Update weekly log

--- a/WeeklyLogs/Log122224_011125.md
+++ b/WeeklyLogs/Log122224_011125.md
@@ -16,7 +16,7 @@
 	- Calculated peak velocity that is then used to calculate along channel velocity for each time step
 - Tidal amplitude is also calculated first, then used to calculate along channel water level for each time step
 
-Steps I've gathered from the spreadsheet:
+Steps I've gathered from the spreadsheet:<br>
 1) Calculate beta<br>
 2) Calculate omega<br>
 3) Calculate hydraulic radius (R)<br>
