Update weekly log

--- a/WeeklyLogs/Log011225_011825.md
+++ b/WeeklyLogs/Log011225_011825.md
@@ -4,7 +4,7 @@
 - Reproduced van Rijn's spreadsheet
 
 ## Results
-1) Reproduced van Rijn's spreadsheet
+### 1) Reproduced van Rijn's spreadsheet
 - Velocity is determined by comparing the initial max peak tidal velocity and the calculated peak tidal velocity at x=0, t=0
 	- Verified using van Rijn's Scheldt River dataset finding values closest to those calculated in the paper
 - Reproduced water level and velocity at x (Fig. 1)
@@ -14,8 +14,8 @@
 Figure 1: Water level and velocity at x on primary axis. dEta/dx on secondary axis.
 
 
-2) Reproduced van Rijn's (2010) figures
-- Used iteration to find velocities for van Rijn's calculations for the Scheldt River in the 2010 paper and found ~0.8 used
+### 2) Reproduced van Rijn's (2010) figures
+- Used iteration to find velocities for van Rijn's calculations for the Scheldt River in the 2010 paper and found ~0.8 m/s to be the best value for ks=0.03
 	- This could change depending on water depth, bottom friction, etc
 		- e.g. u_peak = 0.801 (ks=0.03); u_peak = 0.790 (ks=0.05); u_peak = 0.774 (ks=0.1)
 	- Iteration is built into function so it will automatically find an optimized velocity that comes within 0.01 of the computed peak tidal velocity
