Update weekly log

--- a/WeeklyLogs/Log011925_012525.md
+++ b/WeeklyLogs/Log011925_012525.md
@@ -20,19 +20,19 @@
 
 
 ![ListImageTimestamps](../Figures/012325meeting/SampleDSWxTerminalOutput_01.png)<br>
-Figure 1: 
+Figure 1: List of timestamps for images found.
 
 ![SampleDSWxImage](../Figures/012325meeting/SampleDSWxFig.png)<br>
-Figure 2: 
+Figure 2: Sample image of output from satellite image at target date.
 
 ![CalculatedCells](../Figures/012325meeting/SampleDSWxTerminalOutput_02.png)<br>
-Figure 3: 
+Figure 3: Calculated output for number of wells cells and wetted area for satellite image.
 
 ![InundationFrequenciesWillapaBay](../Figures/012325meeting/WillapaBayInundationFrequencies.png)<br>
-Figure 4:
+Figure 4: Map with frequencies of wet cells (Willapa Bay) for all images within time range.
 
-![InundationFrequenciesGraysHarbor](../Figures/012325meeting/GraysHarborInundationFrequencies)<br>
-Figure 5:
+![InundationFrequenciesGraysHarbor](../Figures/012325meeting/GraysHarborInundationFrequencies.png)<br>
+Figure 5: Map with frequencies of wet cells (Grays Harbor) for all images within time range.
 
 ## Next steps
 - Integrating tides into the figure
