Update weekly log

--- a/WeeklyLogs/Log011925_012525.md
+++ b/WeeklyLogs/Log011925_012525.md
@@ -34,6 +34,9 @@ Figure 4: Map with frequencies of wet cells (Willapa Bay) for all images within 
 ![InundationFrequenciesGraysHarbor](../Figures/012325meeting/GraysHarborInundationFrequencies.png)<br>
 Figure 5: Map with frequencies of wet cells (Grays Harbor) for all images within time range.
 
+## Issues:
+- Script plotting all available images (loadRadarFiles.py) does not fully load image on dates with multiple images (e.g. 2024-11-15, 2024-11-27, etc)
+
 ## Next steps
 - Integrating tides into the figure
 
