--- a/WeeklyLogs/Log012625_020125.md
+++ b/WeeklyLogs/Log012625_020125.md
@@ -4,7 +4,7 @@
 - Remote sensing project
 
 ## Results
-1) Added water level plot
+### 1) Added water level plot
 - Added Westport/Tokepoint tide gauge info to output (Fig. 1)
 
 ![DSWxMapw/Tides](../Figures/013025meeting/GraysHarbor_DSWx_S1_map_tides.png)<br>
