--- a/WeeklyLogs/Log012625_020125.md
+++ b/WeeklyLogs/Log012625_020125.md
@@ -10,7 +10,7 @@
 ![DSWxMapw/Tides](../Figures/013025meeting/GraysHarbor_DSWx_S1_map_tides.png)<br>
 Figure 1: Inundation map with Westport water levels.
 
-2) Distribution of tides
+### 2) Distribution of tides
 - Plotted distribution of water levels and NTR for 2024 and for Sept.-Dec. 2024 (Fig. 2)
 	- Jan. 2025 water levels not verified yet
 
@@ -18,7 +18,7 @@ Figure 1: Inundation map with Westport water levels.
 Figure 2: Distribution of water levels in 2024 (a), Sept.-Dec. 2024 (c), and distribution of non-tidal residuals in 2024 (b) and Sept.-Dec. 2024 (d). 
 
 
-3) Plot image layers side by side
+### 3) Plot image layers side by side
 - OPERA's DSWx product generates 4 layers (WTR, BWTR, CONF, DIAG) and a PNG file for each radar image captured
 	- Each layer has its own classifications and definitions of cells
 	- WTR layer:
@@ -41,17 +41,18 @@ Figure 2: Distribution of water levels in 2024 (a), Sept.-Dec. 2024 (c), and dis
 - WTR layer should show map of open water and inundated vegetation cells (Fig. 4)
 - CONF layer should show map of open water (high, moderate-confidence) and inundated vegetation cells for both non-potential and potential wetlands (Fig. 5)
 
-![WTR](../Figures/013025meeting/GraysHarbor_WTRLayer.png)<br>
-Figure 3: WTR layer.
 
 ![BWTR](../Figures/013025meeting/GraysHarbor_BWTRLayer.png)<br>
+Figure 3: BWTR layer.
+
+![WTR](../Figures/013025meeting/GraysHarbor_WTRLayer.png)<br>
 Figure 4: WTR layer.
 
 ![WTR](../Figures/013025meeting/GraysHarbor_CONFLayer.png)<br>
 Figure 5: CONF layer.
 
 
-4) Testing different basemaps
+### 4) Testing different basemaps
 - Will compare images on local computer
 
 
