--- a/WeeklyLogs/Log012625_020125.md
+++ b/WeeklyLogs/Log012625_020125.md
@@ -58,6 +58,6 @@ Figure 5: CONF layer.
 
 ## Next steps
 - Need to do same distribution for Willapa Bay/Tokepoint
-- Plot water levels relative to MHW
+- Plot water levels/inundation relative to MHW
 - Also include record obtained from Karthik (Jan. 2022, Dec. 2023)
 
