--- a/WeeklyLogs/Log020925_022225.md
+++ b/WeeklyLogs/Log020925_022225.md
@@ -26,7 +26,7 @@ Figure 2: Zoomed in plot of image layer.
 Figure 3: Zoomed in plot of overlapping plot.
 
 ![CombinedVerify](../Figures/022025meeting/combined_verify.png)<br>
-Figure 4: Map with individual cells (MSL, image layer) and overlapping cells.
+Figure 4: Verification that MSL layer is the same as 10/22/2024 image.
 
 ![HighTide](../Figures/022025meeting/combined_122424.png)<br>
 Figure 5: Overlapping plot for high(est) tide.
