Update weekly log

--- a/WeeklyLogs/Log020925_022225.md
+++ b/WeeklyLogs/Log020925_022225.md
@@ -42,6 +42,8 @@ Figure 7: Overlapping plot for low(ish) tide.
 - Ideas for workshop deliverables:
 	- Non-technical visualizations explaining riverine/coastal transition zone
 	- Map of transition zone/flood zones along Willapa River
+		- Frequency map of tides with high NTRs as potential transition zones
+		- Include layer of MSL
 - Questions our modeling/research could help address:
 	- How can we include this transition zone to characterize flood risk for communities?
 	- What effects does the surge plain have on mitigating tidal flooding/riverine flooding for communities upstream and downstream? (surge plain located north of South Bend)
