Update weekly log

--- a/WeeklyLogs/Log022325_030125.md
+++ b/WeeklyLogs/Log022325_030125.md
@@ -83,3 +83,8 @@ Figure 11: Time series of Westport water levels with satellite image occurrences
 - Plan for upcoming month's research
 	- Writing up methods for how to address research questions
 	- Lit review for studies integrating analytical model and remote sensing for compound flooding work
+- Prepare extended forcing files (waves, discharge) for extended DFM runs to include remote sensing images
+	- 2021:
+		- December 10, 12, 19, 22 (Grays Harbor, Willapa Bay)
+	- 2023:
+		- December 18 (Grays Harbor, Willapa Bay)
