Update weekly log

--- a/WeeklyLogs/Log022325_030125.md
+++ b/WeeklyLogs/Log022325_030125.md
@@ -67,6 +67,13 @@ Figure 8: Histogram of filtered (NTR<0.1m) and unfiltered wetted area.
 	- 52/92 (56%) images occur when Westport water levels are below MSL (1.141m)
 	- 89/92 (96%) images occur when Westport water levels are below MHW (2.218m)
 	- 19/92 (20%) images occur when Westport water levels are below MLW (0.083m)
+- Future questions with more images:
+	- Distribution of spatial inundation frequency
+	- Stronger relationship between Westport water level and total wetted surface area
+	- Confirmation that total wetted surface area exceeds MSL wetted surface area every time MSL is exceeded at Westport
+	- Smaller NTR during non-stormy periods to get more MSL images
+		- How wetted surface area may change without influence of high river discharge
+	- 
 
 ![Timeseries2024](../Figures/022725meeting/westport_satelliteimage_2024.png)<br>
 Figure 9: Time series of Westport water levels with satellite image occurrences for 2024.
