Update weekly log

--- a/WeeklyLogs/Log030225_032225.md
+++ b/WeeklyLogs/Log030225_032225.md
@@ -23,16 +23,13 @@ Figure 2: Along channel max water levels from Grays Harbor mouth to Porter.
 Figure 3: Along channel max water levels from Grays Harbor mouth to 50km upstream.
 
 ### b) Jan 2022 DFM runs
-- Tides, Tides+MET (completed)
-- Tides+MET+Discharge (in progress)
+- Tides, Tides+MET, Tides+MET+Discharge (completed)
 - Tides+MET+Discharge+Waves (need to do)
+- Model with discharge does better but still doesn't exactly agree at Montesano.
 
 
-![Jan2022_T](../Figures/032125meeting/waterlevels_Jan2022_T.png)<br>
-Figure 4: Station water levels for January 2022 model run (tides only).
-
-![Jan2022_TM](../Figures/032125meeting/waterlevels_Jan2022_TM.png)<br>
-Figure 5: Station water levels for January 2022 model run (tides+MET).
+![Jan2022_dfm](../Figures/032125meeting/comparestationwaterlevels_Jan2022)<br>
+Figure 4: Comparing water levels from January 2022 model runs (tides, tides+MET, tides+MET+discharge).
 
 
 ## Issues:
