Update weekly log

--- a/WeeklyLogs/Log030225_032225.md
+++ b/WeeklyLogs/Log030225_032225.md
@@ -17,7 +17,7 @@
 Figure 1: Comparing water levels from December 2023 model runs (tides, tides+MET, tides+MET+discharge).
 
 ![AlongChannelFull](../Figures/032125meeting/comparewaterlevels_Dec2023.png)<br>
-Figure 2: Along channel max water levels from Grays Harbor mouth to Porter.
+Figure 2: Along channel max water levels from Grays Harbor mouth to Porter (December 2023).
 
 ![AlongChannel0-50](../Figures/032125meeting/comparewaterlevels_0_50_Dec2023.png)<br>
 Figure 3: Along channel max water levels from Grays Harbor mouth to 50km upstream.
@@ -26,10 +26,15 @@ Figure 3: Along channel max water levels from Grays Harbor mouth to 50km upstrea
 - Tides, Tides+MET, Tides+MET+Discharge (completed)
 - Tides+MET+Discharge+Waves (need to do)
 - Model with discharge does better but still doesn't exactly agree at Montesano.
-
+- Along channel max water level diverges between 20 and 30km upstream (mouth of Chehalis River)
+	- Agrees with December 2023 along channel transect
 
 ![Jan2022_dfm](../Figures/032125meeting/comparestationwaterlevels_Jan2022)<br>
 Figure 4: Comparing water levels from January 2022 model runs (tides, tides+MET, tides+MET+discharge).
+
+
+![AlongChannelFull](../Figures/032125meeting/comparewaterlevels_0_50_Jan2022.png)<br>
+Figure 5: Along channel max water levels from Grays Harbor mouth to Porter (January 2022).
 
 
 ## Issues:
