Update weekly log

--- a/WeeklyLogs/Log032325_032925.md
+++ b/WeeklyLogs/Log032325_032925.md
@@ -79,5 +79,7 @@ Figure 9: DFM run for Jan2022 storm with TMD forcing.
 - Work on presentation for CoPes Team 2 meeting
 - Run models for:
 	- December 2015 storm event
-	- January 2021 storm event
+	- December 2007 great gale event (sufficient data)
+	- January 2021 storm event?
+		- No Montesano data
 
