Update weekly log

--- a/WeeklyLogs/Log032325_032925.md
+++ b/WeeklyLogs/Log032325_032925.md
@@ -1,10 +1,10 @@
 # March 23 - March 29, 2025
 
 ## Summary:
-1) Reran Wuming's V9.9 version
-2) Create restart files for Dec2023 and Jan2022 storm runs
-3) Debugging DFM runs
-4) Run Jan2022 and Dec2023 periods using restart file
+1) Reran Wuming's V9.9 version<br>
+2) Create restart files for Dec2023 and Jan2022 storm runs<br>
+3) Debugging DFM runs<br>
+4) Run Jan2022 and Dec2023 periods using restart file<br>
 
 ## Results:
 ### 1) Reran Wuming's V9.9 version to verify same configurations
