Update weekly log

--- a/WeeklyLogs/Log033025_040525.md
+++ b/WeeklyLogs/Log033025_040525.md
@@ -59,12 +59,11 @@ Figure 4: (a) Montesano water levels, (b) discharge from Porter, Wynoochee, and 
 Figure 5: (a) Discharge from Porter, Wynoochee, and Satsop gauges, (b) tides at Westport, and (c) along channel water level profiles over time.
 
 
-
 ## Issues:
 - December 2023 model run looks different than Wuming's
-	- 
-
-
+	- Seems like models are using default 0.023 roughness
 
 
 ## Next steps:
+- Run January 2022 storms using same files
+- Debug December 2023 model output (compared with Wuming's previous validation run)
