Update weekly log

--- a/WeeklyLogs/Log040625_041225.md
+++ b/WeeklyLogs/Log040625_041225.md
@@ -9,7 +9,7 @@
 - Plot observed vs modeled water levels for Westport, Toke Point, and Montesano for TMD run (Fig. 1,2,3)
 - Calculated RMSE, scatter index, bias, and R (correlation) (Table 1)
 	
-[Westport](../Figures/041025meeting/westport_Dec2023_TMD_1to1waterlevels.png)<br>
+![Westport](../Figures/041025meeting/westport_Dec2023_TMD_1to1waterlevels.png)<br>
 Figure 1: Observed water levels vs modeled water levels (Westport).
 
 ![Tokepoint](../Figures/041025meeting/tokepoint_Dec2023_TMD_1to1waterlevels.png)<br>
