--- a/WeeklyLogs/Log042025_050325.md
+++ b/WeeklyLogs/Log042025_050325.md
@@ -2,6 +2,7 @@
 
 ## Summary:
 1) Plot compound flooding contributions
+2) Plot percent wet maps
 
 
 ## Results:
@@ -28,6 +29,21 @@ Figure 2: MET contributions to water levels in Grays Harbor.
 
 ![DischargeContribution](../Figures/050125meeting/discharge_contribution_map.png)<br>
 Figure 3: Discharge contributions to water levels in Grays Harbor.
+
+### 2) Plot percent wet maps
+- Calculate percent wet for each cell and plot map for TMD, TD, TM, and T runs (Fig. 4,5,6,7)
+
+![DischargeContribution](../Figures/050125meeting/percent_wet_map_tmd.png)<br>
+Figure 4: Percent wet map for December 2023 storm (tides+MET+discharge run).
+
+![DischargeContribution](../Figures/050125meeting/percent_wet_map_td.png)<br>
+Figure 5: Percent wet map for December 2023 storm (tides+discharge run).
+
+![DischargeContribution](../Figures/050125meeting/percent_wet_map_tm.png)<br>
+Figure 6: Percent wet map for December 2023 storm (tides+MET run).
+
+![DischargeContribution](../Figures/050125meeting/percent_wet_map_t.png)<br>
+Figure 7: Percent wet map for December 2023 storm (tides run).
 
 
 ## To do:
