--- a/WeeklyLogs/Log050425_051025.md
+++ b/WeeklyLogs/Log050425_051025.md
@@ -67,7 +67,7 @@ Figure 8: Max water depth occurrence from combined contribution.
 	- The main channel of Chehalis River reaches peak nonlinear effect within the first few days
 	- HOWEVER, many patches within the surge plain reaches max near the end of the time series
 
-![nonlineareffect](../Figures/050825meeting/nonlineareffect_max)<br>
+![nonlineareffect](../Figures/050825meeting/nonlineareffect_max.png)<br>
 Figure 9: Max nonlinear effect.
 
 ![nonlineareffect_occurrence](../Figures/050825meeting/nonlineareffect_maxoccurrence.png)<br>
