--- a/WeeklyLogs/Log051125_051725.md
+++ b/WeeklyLogs/Log051125_051725.md
@@ -14,8 +14,6 @@ Figure 1: North Bay time series.
 
 
 ### 1b) Main bay time series
-
-
 Max wind contribution within the main bay is reached on December 05, 2023 T05:00Z. Winds were sustained for half a day prior at just below 10m/s coming from the south (192 degrees). Water velocity is 40 cm/s flowing west-southwest (~250 degrees). Although tides were dropping, the opposing winds and water flow elevate water levels within the main part of the bay.
 
 ![mainbay](../Figures/051525meeting/mainbay_timeseries.png)<br>
@@ -29,4 +27,5 @@ Figure 3: Montesano time series.
 
 
 ## Next steps:
+- Look at volume flux upstream of Montesano, entrances of surge plain, and mouth of Chehalis River
 - Compare results for January 2022 storm
