--- a/WeeklyLogs/Log051125_051725.md
+++ b/WeeklyLogs/Log051125_051725.md
@@ -1,8 +1,8 @@
 # May 11 - 17, 2025
 
 ## Summary:
-1) Wind contribution time series</br>
-2) Discharge contribution time series</br>
+1) Wind contribution time series<br>
+2) Discharge contribution time series<br>
 
 ## Results:
 ### 1a) North bay time series
