--- a/WeeklyLogs/Log051825_052425.md
+++ b/WeeklyLogs/Log051825_052425.md
@@ -59,7 +59,7 @@ Figure 7: Comparisons between different methods for nonlinear effect (Xiao vs. B
 
 ![bao_solution](../Figures/052225meeting/analyticalsolution_bao2022.png)<br>
 
-[bao_analyticalcomparison](../Figures/052225meeting/analyticalmodel_bao.png)<br>
+![bao_analyticalcomparison](../Figures/052225meeting/analyticalmodel_bao.png)<br>
 Figure 8: Comparisons between analytical model and TD run.
 
 
