Update weekly log

--- a/WeeklyLogs/Log052525_060725.md
+++ b/WeeklyLogs/Log052525_060725.md
@@ -1,7 +1,8 @@
 # May 25 - June 07, 2025
 
 ## Summary:
-1) Momentum balance for Grays Harbor<\br>
+1) Momentum balance for Grays Harbor<br>
+2) Momentum balance for Grays Harbor (rotated)<br>
 
 ## Results:
 ### 1) Momentum balance
@@ -24,6 +25,26 @@ Figure 2: Momentum balance (individual terms).
 
 ![momentumbalance_montesano](../Figures/060525meeting/momentumbalance_montesano.png)<br>
 Figure 3: Momentum balance (Montesano).
+
+- Compared bottom stress between DFM and Bao et al. (2022)'s tau equation
+	- 
+![taubao](../Figures/060525meeting/tauequation_bao.png)<br>
+
+![tau_comparison](../Figures/060525meeting/tau_comparison.png)<br>
+Figure 4: Comparing bottom stress between DFM and Bao et al. (2022).
+
+### 2) Momentum balance (rotated)
+- Rotate x,y to streamwise and stream normal coordinate system
+	- Found direction between two stations and rotated from N
+
+![angleofrotation](../Figures/060525meeting/dx_angledirection.png)<br>
+Figure 5: Angle between stations.
+
+![rotationequation](../Figures/060525meeting/rotationmatrix.png)<br>
+
+
+
+
 
 
 
