Update weekly log

--- a/WeeklyLogs/Log052525_060725.md
+++ b/WeeklyLogs/Log052525_060725.md
@@ -22,7 +22,6 @@ Figure 1: Momentum balance.
 ![momentumbalance_terms](../Figures/060525meeting/momentumbalance_terms.png)<br>
 Figure 2: Momentum balance (individual terms).
 
-
 ![momentumbalance_montesano](../Figures/060525meeting/momentumbalance_montesano.png)<br>
 Figure 3: Momentum balance (Montesano).
 
@@ -35,16 +34,24 @@ Figure 4: Comparing bottom stress between DFM and Bao et al. (2022).
 
 ### 2) Momentum balance (rotated)
 - Rotate x,y to streamwise and stream normal coordinate system
+	- Assume dx = 1000; dy = 0
 	- Found direction between two stations and rotated from N
+
+![directionofangle](../Figures/060525meeting/directionofangle.png)<br>
 
 ![angleofrotation](../Figures/060525meeting/dx_angledirection.png)<br>
 Figure 5: Angle between stations.
 
 ![rotationequation](../Figures/060525meeting/rotationmatrix.png)<br>
 
+![momentumbalance_rotated](../Figures/060525meeting/momentumbalance_xdir_rotated.png)<br>
+Figure 6: Momentum balance rotated to streamwise.
 
+![momentumbalance_terms_rotated](../Figures/060525meeting/momentumbalance_terms_rotated.png)<br>
+Figure 7: Momentum balance (individual terms) rotated to streamwise.
 
-
+![momentumbalance_montesano_rotated](../Figures/060525meeting/momentumbalance_montesano_rotated.png)<br>
+Figure 8: Momentum balance (Montesano) rotated to streamwise.
 
 
 
