--- a/WeeklyLogs/Log052525_060725.md
+++ b/WeeklyLogs/Log052525_060725.md
@@ -25,7 +25,8 @@ Figure 2: Momentum balance (individual terms).
 ![momentumbalance_montesano](../Figures/060525meeting/momentumbalance_montesano.png)<br>
 Figure 3: Momentum balance (Montesano).
 
-- Compared bottom stress between DFM and Bao et al. (2022)'s tau equation
+- Compared bottom stress between DFM and Bao et al. (2022)'s tau equation (Fig. 4)<br>
+
 ![taubao](../Figures/060525meeting/tauequation_bao.png)<br>
 
 ![tau_comparison](../Figures/060525meeting/tau_comparison.png)<br>
