--- a/WeeklyLogs/Log052525_060725.md
+++ b/WeeklyLogs/Log052525_060725.md
@@ -57,3 +57,4 @@ Figure 8: Momentum balance (Montesano) rotated to streamwise.
 
 
 ## Next Steps:
+- Calculate d/dx terms (adv, pgf, tau) from neighboring points
