Update weekly log

--- a/WeeklyLogs/Log052525_060725.md
+++ b/WeeklyLogs/Log052525_060725.md
@@ -3,12 +3,19 @@
 ## Summary:
 1) Momentum balance for Grays Harbor<br>
 2) Momentum balance for Grays Harbor (rotated)<br>
+3) Momentum balance for select locations<br>
 
 ## Results:
 ### 1) Momentum balance
 - Calculate momentum balance for along channel observation points for Grays Harbor/Chehalis River
 
+Bao's momentum balance equation
 ![momentumequation](../Figures/060525meeting/momentumequation_xdir.png)<br>
+
+DFM momentum balance equation
+![dfm_momentumequation](../Figures/060525meeting/dfm_momentumbalance.png)<br>
+- Fx and Fy represent the unbalance of horizontal Reynolds stresses
+- Mx and My represent the contributions due to external sources or sinks of momentum (external forces by hydraulic structures, discharge or withdrawal of water, wave stresses, etc)
 
 
 - Assumptions:
@@ -45,16 +52,45 @@ Figure 5: Angle between stations.
 
 ![rotationequation](../Figures/060525meeting/rotationmatrix.png)<br>
 
+- Verification that rotation matrix worked
+- GH_T09 is located near the mouth of Grays Harbor, so velocities should be predominantly east-west (Fig. 6)
+	- Comparisons between u (east-west flow) and v' (streamwise direction after rotation) show that they both agree
+
+![gh_t09](../Figures/060525meeting/gh_t09_eastwestflow.png)<br>
+
+- GH_T38 is located at a north-south section of the Chehalis River, so velocities should be predominantly north-south (Fig. 7)
+	- Comparisons between v (north-south flow) and v' (streamwise direction after rotation) show that they are opposite, which is to be expected (ebb flow generates positive v, and since rotating coordinate system to positive upstream, v' will be negative as water is flowing out)
+
+![gh_t38](../Figures/060525meeting/gh_t38_northsouthflow.png)<br>
+
+
 ![momentumbalance_rotated](../Figures/060525meeting/momentumbalance_xdir_rotated.png)<br>
-Figure 6: Momentum balance rotated to streamwise.
+Figure 8: Momentum balance rotated to streamwise.
 
 ![momentumbalance_terms_rotated](../Figures/060525meeting/momentumbalance_terms_rotated.png)<br>
-Figure 7: Momentum balance (individual terms) rotated to streamwise.
+Figure 9: Momentum balance (individual terms) rotated to streamwise.
 
 ![momentumbalance_montesano_rotated](../Figures/060525meeting/momentumbalance_montesano_rotated.png)<br>
-Figure 8: Momentum balance (Montesano) rotated to streamwise.
+Figure 10: Momentum balance (Montesano) rotated to streamwise.
 
+### 3) Momentum balance for GH_T09 and GH_T51
+- Momentum balance for GH_T09 (Fig. 11)
+	- Much more balanced
+	- Maybe a shift in one of the derivatives?
+
+![momentumbalance_gh_t09](../Figures/060525meeting/gh_t09_momentumbalance_rotated.png)<br>
+Figure 11: Momentum balance rotated to streamwise for GH_T09.
+
+- Momentum balance for GH_T51 (Fig. 12)
+	- Much more dominated by PGF and friction
+	- One of the terms should be different sign?
+
+![momentumbalance_gh_t51](../Figures/060525meeting/gh_t51_momentumbalance_rotated.png)<br>
+Figure 11: Momentum balance rotated to streamwise for GH_T51.
 
 
 ## Next Steps:
+- Figure out how to calculate Reynolds stress terms
+	- Reynolds stress term (x-momentum): d/dx (ū'^2) (taking the time average of u'^2)
 - Calculate d/dx terms (adv, pgf, tau) from neighboring points
+- Calculate Cd (friction coefficient) based on velocity/Chezy's for each station
