--- a/WeeklyLogs/Log052525_060725.md
+++ b/WeeklyLogs/Log052525_060725.md
@@ -9,10 +9,10 @@
 ### 1) Momentum balance
 - Calculate momentum balance for along channel observation points for Grays Harbor/Chehalis River
 
-Bao's momentum balance equation
+Bao's momentum balance equation<br>
 ![momentumequation](../Figures/060525meeting/momentumequation_xdir.png)<br>
 
-DFM momentum balance equation
+DFM momentum balance equation<br>
 ![dfm_momentumequation](../Figures/060525meeting/dfm_momentumbalance.png)<br>
 - Fx and Fy represent the unbalance of horizontal Reynolds stresses
 - Mx and My represent the contributions due to external sources or sinks of momentum (external forces by hydraulic structures, discharge or withdrawal of water, wave stresses, etc)
