--- a/WeeklyLogs/Log060825_061425.md
+++ b/WeeklyLogs/Log060825_061425.md
@@ -7,14 +7,15 @@
 ## Results:
 ### 1) Wind stress calculations
 - Calculations for wind stress component:
-	- Drag coefficient
+	- Drag coefficient<br>
 ![dragcoefficient](../Figures/061225meeting/dragcoeff_wind.png)<br>
 	- Wind speed vs drag coefficient
 		- (a) Cd = 6.3e-04 for U=0 m/s
 		- (b) Cd = 7.23e-03 for U=100 m/s
+<br>
 ![windspeeddragcoeff](../Figures/061225meeting/windspeed_dragcoeff.png)<br>
 
-	- Surface wind stress (same as bottom stress equation)
+	- Surface wind stress (same as bottom stress equation)<br>
 ![windstressequation](../Figures/061225meeting/surfacewindstress.png)<br>
 ![windspeedwindstress](../Figures/061225meeting/windspeed_windstress_individual.png)<br>
 
@@ -31,4 +32,4 @@
 
 
 ## Next steps:
-- Calculate viscous stress terms using horizontal 
+- Calculate viscous stress terms using horizontal viscosity
