--- a/WeeklyLogs/Log060825_061425.md
+++ b/WeeklyLogs/Log060825_061425.md
@@ -11,8 +11,7 @@
 ![dragcoefficient](../Figures/061225meeting/dragcoeff_wind.png)<br>
 	- Wind speed vs drag coefficient
 		- (a) Cd = 6.3e-04 for U=0 m/s
-		- (b) Cd = 7.23e-03 for U=100 m/s
-<br>
+		- (b) Cd = 7.23e-03 for U=100 m/s<br>
 ![windspeeddragcoeff](../Figures/061225meeting/windspeed_dragcoeff.png)<br>
 
 	- Surface wind stress (same as bottom stress equation)<br>
