--- a/WeeklyLogs/Log060825_061425.md
+++ b/WeeklyLogs/Log060825_061425.md
@@ -31,4 +31,4 @@
 
 
 ## Next steps:
-- Calculate viscous stress terms using horizontal viscosity
+- Calculate viscous stress terms using horizontal viscosity term
