--- a/WeeklyLogs/Log060825_061425.md
+++ b/WeeklyLogs/Log060825_061425.md
@@ -29,6 +29,8 @@
 
 ![momentumbalance](../Figures/061225meeting/monentumbalance_gh_t09_gh_t10.png)<br>
 
+![momentumbalance_zoomed](../Figures/061225meeting/monentumbalance_gh_t09_gh_t10_zoomed.png)<br>
+
 
 ## Next steps:
 - Calculate viscous stress terms using horizontal viscosity term
