--- a/WeeklyLogs/Log061525_062125.md
+++ b/WeeklyLogs/Log061525_062125.md
@@ -56,9 +56,13 @@ Figure 3: Velocity vs. friction for location between GH_T09 and GH_T10.
 
 
 ![momentumbalance_ght51_ght52_zoomed](../Figures/062025meeting/momentumbalance_gh_t51_gh_t52_zoomed.png)<br>
-Figure 1: Momentum balance for location between GH_T51 and GH_T52 (just downstream of Montesano USGS gauge).
+Figure 4: Momentum balance for location between GH_T51 and GH_T52 (just downstream of Montesano USGS gauge).
 
 
 Next steps:
+- Close momentum budget for upstream location
+	- Taking cross section average?
+	- For curved sections, need to add new observation points
+	- Budget also doesn't seem to close well within the bay
 - Find along channel location where pressure and friction terms become first order
 	- Could be used to locate transition zone?
